# Rubik2x2-RL

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
agents/: dqn_agent.py  q_network.py  replay_buffer.py
datasets/: demonstrations.json  upper_layer_algorithms.json  upper_layer_algorithms_full.json
envs/: cube_state.py  lbl_solver.py  render_utils.py  rubik2x2_env.py
envs/rewards/: reward_helpers.py  reward_interface.py  reward_modes.py
experiments/: experiment_results.csv
models/: il_classifier.pth  rl_agent.pth
scripts/: check_dataset_consistency.py  display_demonstrations.py  eval_il_lbl.py  eval_il_model.py  eval_lbl.py  evaluate_il_model.py  evaluate_model.py  evaluate_rl_model.py  generate_CLL_variants.py  generate_demonstrations.py
src/rubik2x2/agents/: dqn_agent.py  q_network.py  replay_buffer.py
src/rubik2x2/envs/: cube_state.py  lbl_solver.py  render_utils.py  rubik2x2_env.py
src/rubik2x2/envs/rewards/: reward_helpers.py  reward_interface.py
src/rubik2x2/scripts/: check_dataset_consistency.py  evaluate_il_model.py  evaluate_lbl.py  evaluate_rl_model.py  generate_CLL_variants.py
src/rubik2x2/training/: rl_experiment_planner.py  train_il.py  train_rl.py
tests/: test_cube_state.py
training/: rl_experiment_planner.py  train_il.py  train_rl.py
